deploy/gray-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gray-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
spec:
  rules:
  - host: blue.35.229.244.53.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gray-web-svc
            port:
              number: 80
